--- a/css/bubble.css
+++ b/css/bubble.css
@@ -26,7 +26,7 @@
   pointer-events: none;
 }
 	#tooltip {   
-		position: absolute;           
+		position: relative;           
 		text-align: center;
 		padding: 20px;             
 		margin: 10px;
