--- a/css/steve-jobs.css
+++ b/css/steve-jobs.css
@@ -164,7 +164,8 @@ body, ul, table, form{
 .sj-book .p1,
 .sj-book .p2,
 .sj-book .p3,
-.sj-book .p16{
+.sj-book .p19,
+.sj-book .p20{
 	background-color:white;
 	background-image:url(../pics/book-covers.jpg) !important;
 }
@@ -233,8 +234,11 @@ body, ul, table, form{
 	background-position:-1920px 0 !important;
 }
 
+.sj-book .p19{
+	background-position:-960px 0 !important;
+}
 
-.sj-book .p16{
+.sj-book .p20{
 	background-position:-1440px 0 !important;
 }
 
